@@ -137,6 +137,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4449: AssertionError in mp_benchmarks.py, caused by an underlying issue
+  in sharedctypes.py.
+
 - Issue #1225107: inspect.isclass() returned True for instances with a custom
   __getattr__.
 
